AC/library/ilib/math/ffi/math_ffi.v

// AC ilib: math — V C interop (libacmath.so / acmath.dll)
// Generated by AC compiler — inline into module main
#flag -L @AC_LIBDIR@ -lacmath
#flag -Wl,-rpath,@AC_LIBDIR@
#include "@AC_LIBDIR@/math_c.h"

fn C.ac_math_pi_const() f64
fn C.ac_math_e_const()  f64
fn C.ac_math_tau_const()f64
fn C.ac_math_inf()      f64
fn C.ac_math_pi(digits int) f64
fn C.ac_math_e(digits int)  f64
fn C.ac_sin(x f64)  f64
fn C.ac_cos(x f64)  f64
fn C.ac_tan(x f64)  f64
fn C.ac_csc(x f64)  f64
fn C.ac_sec(x f64)  f64
fn C.ac_cot(x f64)  f64
fn C.ac_asin(x f64) f64
fn C.ac_acos(x f64) f64
fn C.ac_atan(x f64) f64
fn C.ac_acsc(x f64) f64
fn C.ac_asec(x f64) f64
fn C.ac_acot(x f64) f64
fn C.ac_atan2(y f64, x f64) f64
fn C.ac_deg2rad(d f64) f64
fn C.ac_rad2deg(r f64) f64
fn C.ac_pow(b f64, e f64)  f64
fn C.ac_sqrt(x f64)  f64
fn C.ac_cbrt(x f64)  f64
fn C.ac_abs(x f64)   f64
fn C.ac_abs_int(x i64) i64
fn C.ac_floor(x f64) f64
fn C.ac_ceil(x f64)  f64
fn C.ac_round(x f64) f64
fn C.ac_hypot(a f64, b f64) f64
fn C.ac_log(x f64)   f64
fn C.ac_log2(x f64)  f64
fn C.ac_log10(x f64) f64
fn C.ac_mod(a f64, b f64)   f64
fn C.ac_mod_int(a i64, b i64) i64
fn C.ac_to_int(x f64) i64
fn C.ac_to_dec(x i64) f64
fn C.ac_gcd(a i64, b i64) i64
fn C.ac_lcm(a i64, b i64) i64
fn C.ac_is_prime(n i64) int
fn C.ac_clamp(v f64, lo f64, hi f64) f64
fn C.ac_sigma(arr &f64, len int) f64
fn C.ac_PI_product(arr &f64, len int) f64
fn C.ac_gradient(arr &f64, len int, out &f64)
fn C.ac_stat_avg(arr &f64, len int)    f64
fn C.ac_stat_median(arr &f64, len int) f64
fn C.ac_stat_q1(arr &f64, len int)     f64
fn C.ac_stat_q3(arr &f64, len int)     f64
fn C.ac_stat_mode(arr &f64, len int)   f64
fn C.ac_stat_min(arr &f64, len int)    f64
fn C.ac_stat_max(arr &f64, len int)    f64
fn C.ac_stat_boxnum(arr &f64, len int, out &f64)

const math_pi_val  = C.ac_math_pi_const()
const math_e_val   = C.ac_math_e_const()
const math_tau_val = C.ac_math_tau_const()
const math_inf_val = C.ac_math_inf()

fn math_pi(n int) f64  { return C.ac_math_pi(n) }
fn math_e(n int) f64   { return C.ac_math_e(n)  }
fn math_sin(x f64) f64 { return C.ac_sin(x) }
fn math_cos(x f64) f64 { return C.ac_cos(x) }
fn math_tan(x f64) f64 { return C.ac_tan(x) }
fn math_csc(x f64) f64 { return C.ac_csc(x) }
fn math_sec(x f64) f64 { return C.ac_sec(x) }
fn math_cot(x f64) f64 { return C.ac_cot(x) }
fn math_asin(x f64) f64 { return C.ac_asin(x) }
fn math_acos(x f64) f64 { return C.ac_acos(x) }
fn math_atan(x f64) f64 { return C.ac_atan(x) }
fn math_acsc(x f64) f64 { return C.ac_acsc(x) }
fn math_asec(x f64) f64 { return C.ac_asec(x) }
fn math_acot(x f64) f64 { return C.ac_acot(x) }
fn math_atan2(y f64, x f64) f64 { return C.ac_atan2(y, x) }
fn math_deg2rad(d f64) f64 { return C.ac_deg2rad(d) }
fn math_rad2deg(r f64) f64 { return C.ac_rad2deg(r) }
fn math_pow(b f64, e f64) f64  { return C.ac_pow(b, e) }
fn math_sqrt(x f64) f64       { return C.ac_sqrt(x)  }
fn math_cbrt(x f64) f64       { return C.ac_cbrt(x)  }
fn math_abs(x f64) f64        { return C.ac_abs(x)   }
fn math_abs_int(x i64) i64    { return C.ac_abs_int(x) }
fn math_floor(x f64) f64      { return C.ac_floor(x) }
fn math_ceil(x f64) f64       { return C.ac_ceil(x)  }
fn math_round(x f64) f64      { return C.ac_round(x) }
fn math_hypot(a f64, b f64) f64 { return C.ac_hypot(a, b) }
fn math_ln(x f64) f64         { return C.ac_log(x)   }
fn math_log(x f64) f64        { return C.ac_log(x)   }
fn math_log2(x f64) f64       { return C.ac_log2(x)  }
fn math_log10(x f64) f64      { return C.ac_log10(x) }
fn math_mod(a f64, b f64) f64 { return C.ac_mod(a, b) }
fn math_mod_int(a i64, b i64) i64 { return C.ac_mod_int(a, b) }
fn math_to_int(x f64) i64     { return C.ac_to_int(x) }
fn math_to_dec(x i64) f64     { return C.ac_to_dec(x) }
fn math_gcd(a i64, b i64) i64 { return C.ac_gcd(a, b) }
fn math_lcm(a i64, b i64) i64 { return C.ac_lcm(a, b) }
fn math_is_prime(n i64) bool  { return C.ac_is_prime(n) != 0 }
fn math_clamp(v f64, lo f64, hi f64) f64 { return C.ac_clamp(v, lo, hi) }

fn math_sigma(lst []f64) f64 {
	return C.ac_sigma(lst.data, lst.len)
}
fn math_pi_product(lst []f64) f64 {
	return C.ac_PI_product(lst.data, lst.len)
}
fn math_gradient(lst []f64) []f64 {
	mut out := []f64{len: lst.len - 1}
	C.ac_gradient(lst.data, lst.len, out.data)
	return out
}
fn stat_avg(l []f64) f64    { return C.ac_stat_avg(l.data, l.len)    }
fn stat_median(l []f64) f64 { return C.ac_stat_median(l.data, l.len) }
fn stat_q1(l []f64) f64     { return C.ac_stat_q1(l.data, l.len)     }
fn stat_q3(l []f64) f64     { return C.ac_stat_q3(l.data, l.len)     }
fn stat_mode(l []f64) f64   { return C.ac_stat_mode(l.data, l.len)   }
fn stat_min(l []f64) f64    { return C.ac_stat_min(l.data, l.len)    }
fn stat_max(l []f64) f64    { return C.ac_stat_max(l.data, l.len)    }
fn stat_boxnum(lst []f64) []f64 {
	mut out := []f64{len: 5}
	C.ac_stat_boxnum(lst.data, lst.len, out.data)
	return out
}

// math namespace object — AC-generated V uses math.sin(x), math.pi, etc.
struct AcMathNS {
    pi  f64
    e   f64
    tau f64
    em  f64
    inf f64
}
fn (m AcMathNS) sin(x f64) f64    { return math_sin(x)   }
fn (m AcMathNS) cos(x f64) f64    { return math_cos(x)   }
fn (m AcMathNS) tan(x f64) f64    { return math_tan(x)   }
fn (m AcMathNS) csc(x f64) f64    { return math_csc(x)   }
fn (m AcMathNS) sec(x f64) f64    { return math_sec(x)   }
fn (m AcMathNS) cot(x f64) f64    { return math_cot(x)   }
fn (m AcMathNS) asin(x f64) f64   { return math_asin(x)  }
fn (m AcMathNS) acos(x f64) f64   { return math_acos(x)  }
fn (m AcMathNS) atan(x f64) f64   { return math_atan(x)  }
fn (m AcMathNS) acsc(x f64) f64   { return math_acsc(x)  }
fn (m AcMathNS) asec(x f64) f64   { return math_asec(x)  }
fn (m AcMathNS) acot(x f64) f64   { return math_acot(x)  }
fn (m AcMathNS) atan2(y f64, x f64) f64 { return math_atan2(y, x) }
fn (m AcMathNS) deg2rad(d f64) f64 { return math_deg2rad(d) }
fn (m AcMathNS) rad2deg(r f64) f64 { return math_rad2deg(r) }
fn (m AcMathNS) pow(b f64, e f64) f64 { return math_pow(b, e) }
fn (m AcMathNS) sqrt(x f64) f64   { return math_sqrt(x)  }
fn (m AcMathNS) cbrt(x f64) f64   { return math_cbrt(x)  }
fn (m AcMathNS) abs(x f64) f64    { return math_abs(x)   }
fn (m AcMathNS) abs_int(x i64) i64 { return math_abs_int(x) }
fn (m AcMathNS) floor(x f64) f64  { return math_floor(x) }
fn (m AcMathNS) ceil(x f64) f64   { return math_ceil(x)  }
fn (m AcMathNS) round(x f64) f64  { return math_round(x) }
fn (m AcMathNS) hypot(a f64, b f64) f64 { return math_hypot(a, b) }
fn (m AcMathNS) ln(x f64) f64     { return math_ln(x)    }
fn (m AcMathNS) log(x f64) f64    { return math_log(x)   }
fn (m AcMathNS) log2(x f64) f64   { return math_log2(x)  }
fn (m AcMathNS) log10(x f64) f64  { return math_log10(x) }
fn (m AcMathNS) mod(a f64, b f64) f64 { return math_mod(a, b) }
fn (m AcMathNS) mod_int(a i64, b i64) i64 { return math_mod_int(a, b) }
fn (m AcMathNS) to_int(x f64) i64 { return math_to_int(x) }
fn (m AcMathNS) to_dec(x i64) f64 { return math_to_dec(x) }
fn (m AcMathNS) gcd(a i64, b i64) i64 { return math_gcd(a, b) }
fn (m AcMathNS) lcm(a i64, b i64) i64 { return math_lcm(a, b) }
fn (m AcMathNS) is_prime(n i64) bool { return math_is_prime(n) }
fn (m AcMathNS) clamp(v f64, lo f64, hi f64) f64 { return math_clamp(v, lo, hi) }
fn (m AcMathNS) sigma(lst []f64) f64  { return math_sigma(lst)  }
fn (m AcMathNS) pi_product(lst []f64) f64 { return math_pi_product(lst) }
fn (m AcMathNS) gradient(lst []f64) []f64 { return math_gradient(lst) }
fn (m AcMathNS) pi_digits(n int) f64  { return math_pi(n)  }
fn (m AcMathNS) e_digits(n int) f64   { return math_e(n)   }

const math = AcMathNS{
    pi:  C.ac_math_pi_const()
    e:   C.ac_math_e_const()
    tau: C.ac_math_tau_const()
    em:  0.5772156649015329
    inf: C.ac_math_inf()
}
